--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-24 [乌克兰独立日：泽连斯基放狠话 俄乌交换战俘](/articles/dw/1024496.md)
+
 8-24 [Meta：伊朗黑客攻击拜登和特朗普工作人员WhatsApp账户](/articles/dw/1024497.md)
 
 8-24 [法国南部犹太教堂外发生爆炸 疑为恐怖袭击](/articles/dw/1024498.md)
@@ -598,6 +600,4 @@
 7-25 [以色列总理在美国国会演讲 佩洛西：史上最糟糕的一次](/articles/dw/1024794.md)
 
 7-25 [芯片巨头德国建厂进展缓慢 唯有台积电例外](/articles/dw/1024795.md)
-
-7-25 [賀錦麗能夠打敗川普嗎？](/articles/dw/1024796.md)
 
