--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-24 [格雷格森看美中竞争：冷战初期 美国也曾不知所措](/articles/voa/1013101.md)
+
 8-24 [图像显示乌军在俄境内攻击范围扩大，俄军每天伤亡约一千人](/articles/voa/1013102.md)
 
 8-24 [中国逆势而行批准五个核电项目 专家: 独裁国家才做得到](/articles/voa/1013103.md)
@@ -598,6 +600,4 @@
 8-13 [巴基斯坦逮捕前情报负责人接受军事审判](/articles/voa/1013399.md)
 
 8-13 [拒绝“数字牢笼”，加州民运人士抗议“网络身份证”](/articles/voa/1013400.md)
-
-8-13 [欧佩克削减2024年石油需求增长预测，中国经济不佳是一大主因](/articles/voa/1013401.md)
 
