--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [加沙停火谈判周末重启，哈马斯不参与但派代表了解情况](/articles/voa/1013098.md)
+
 8-25 [德国发生持刀杀人案造成十几人伤亡，凶嫌已落网，警方展开调查](/articles/voa/1013099.md)
 
 8-25 [英国新首相与习近平首次通话：工党政府的对华政策引发关注](/articles/voa/1013100.md)
@@ -598,6 +600,4 @@
 8-13 [美中金融工作组本周将于上海举行会谈](/articles/voa/1013396.md)
 
 8-13 [美国将恢复向沙特阿拉伯出售进攻型武器](/articles/voa/1013397.md)
-
-8-13 [北京重启伦敦“超级使馆”计划: 英工党政府面临对华政策新考验](/articles/voa/1013398.md)
 
