--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-25 [歪脑｜维吾尔族人被迫加工渔产品 全球海鲜供应链遭污染](/articles/cdt/337692.md)
+
 8-25 [岭南酷儿｜致应勇检察长的公开信：请派给我一名《九部的检察官》，为少年的他立案](/articles/cdt/337694.md)
 
 8-25 [情况有点复杂｜吹哨人吴彦荣被行拘15天！为啥不抓坚果兄弟？](/articles/cdt/337696.md)
@@ -598,6 +600,4 @@
 7-18 [亮见｜自贡16条生命的追问](/articles/cdt/338792.md)
 
 7-18 [【重温】Matters｜记录、联结与反抗：我所知道的端点星](/articles/cdt/338798.md)
-
-7-18 [【CDTV】歪脑｜Ian Johnson：“星火”挑战中共对历史的解释权](/articles/cdt/338800.md)
 
