--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-25 [Telegram首席执行官杜罗夫于法国被逮捕 将接受调查](/articles/voa/1013091.md)
+
+8-25 [法国南部犹太教堂纵火案疑为恐怖袭击 嫌犯遭捕](/articles/voa/1013092.md)
+
 8-25 [德国警察逮捕致命持刀攻击的嫌疑人 伊斯兰国声称对攻击负责](/articles/voa/1013093.md)
 
 8-25 [禾赛美国“维权”成功，中微效仿，美国防部证明中企“涉军”为何困难重重？](/articles/voa/1013094.md)
@@ -596,8 +600,4 @@
 8-13 [前康奈尔大学学生因向犹太学生发布威胁被判监禁21个月](/articles/voa/1013389.md)
 
 8-13 [白宫警告说，伊朗可能即将对以色列发动袭击](/articles/voa/1013390.md)
-
-8-13 [中国官网设惩治台独专栏，学者称其如“钓鱼”网站：“有用的白痴”或自愿上钩](/articles/voa/1013391.md)
-
-8-13 [美国对伊朗据报计划向俄罗斯运送数百枚弹道导弹一事深感关切](/articles/voa/1013392.md)
 
