--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [中国索讨流失文物 外国有义务归还吗？](/articles/voa/1013086.md)
+
 8-25 [中国称将在本周与美会谈中对台湾问题表达严重关切](/articles/voa/1013087.md)
 
 8-25 [中国谴责美国将中企列入出口管制名单 并誓言采取行动](/articles/voa/1013088.md)
@@ -598,6 +600,4 @@
 8-13 [美国要求土耳其劝说伊朗缓和中东紧张](/articles/voa/1013384.md)
 
 8-13 [菲律宾就中国战机向菲巡逻机发射照明弹提出外交抗议](/articles/voa/1013385.md)
-
-8-13 [FBI：正在就特朗普竞选团队遭伊朗黑客攻击一事展开调查](/articles/voa/1013386.md)
 
