--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [中菲在南中国海争议海域再爆冲突，双方重建互信努力又蒙阴影](/articles/voa/1013085.md)
+
 8-25 [中国索讨流失文物 外国有义务归还吗？](/articles/voa/1013086.md)
 
 8-25 [中国称将在本周与美会谈中对台湾问题表达严重关切](/articles/voa/1013087.md)
@@ -598,6 +600,4 @@
 8-13 [马斯克与特朗普进行了冗长的在线对谈](/articles/voa/1013383.md)
 
 8-13 [美国要求土耳其劝说伊朗缓和中东紧张](/articles/voa/1013384.md)
-
-8-13 [菲律宾就中国战机向菲巡逻机发射照明弹提出外交抗议](/articles/voa/1013385.md)
 
