--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-26 [泽连斯基：会支持印度主办第二次乌克兰和平峰会](/articles/voa/1013082.md)
+
+8-26 [中国学生海外留学热度未减 来美不易，英澳日渐受欢迎](/articles/voa/1013083.md)
+
 8-25 [真主党发射数百火箭弹报复以色列，以军先发制人空袭黎巴嫩](/articles/voa/1013084.md)
 
 8-25 [中菲在南中国海争议海域再爆冲突，双方重建互信努力又蒙阴影](/articles/voa/1013085.md)
@@ -596,8 +600,4 @@
 8-13 [菲律宾：未来可能重新检讨与中国达成的对菲坐滩军舰补给“临时安排”协议](/articles/voa/1013380.md)
 
 8-13 [乌克兰继续对俄罗斯库尔斯克和别尔哥罗德发动猛攻](/articles/voa/1013381.md)
-
-8-13 [中东紧张加剧之际红海一艘船只疑似遭到胡塞武装三次袭击](/articles/voa/1013382.md)
-
-8-13 [马斯克与特朗普进行了冗长的在线对谈](/articles/voa/1013383.md)
 
