--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-26 [【404文库】建设性意见｜全国就2辆罐车混运化工食用油，被记者精准发现了？](/articles/cdt/337664.md)
+
 8-25 [潜水鱼X｜《黑神话：悟空》真的不需要女人吗？](/articles/cdt/337676.md)
 
 8-25 [每日一语 2024.8.24](/articles/cdt/337685.md)
@@ -598,6 +600,4 @@
 7-19 [城市的地得｜有一天我们会对何伟说：欢迎回来](/articles/cdt/338769.md)
 
 7-19 [独角鲸工作坊｜反诈再这么一刀切，普通人的银行卡就快成摆设了](/articles/cdt/338771.md)
-
-7-18 [每日一语 2024.7.17](/articles/cdt/338773.md)
 
