--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-26 [中國研擬「房屋養老金」引論戰 爭議為何？](/articles/dw/1024481.md)
+
+8-26 [客座評論：任人打扮的小姑娘—香港「國家安全展覽」](/articles/dw/1024482.md)
+
 8-25 [德国海军航向韩国 是否穿越台海仍未定](/articles/dw/1024483.md)
 
 8-25 [美再制裁涉俄中国企业 北京“强烈不满”](/articles/dw/1024484.md)
@@ -596,8 +600,4 @@
 7-26 [德语媒体：《北京宣言》和“复苏乏力”](/articles/dw/1024779.md)
 
 7-26 [2024巴黎奥运会：你需要知道的一切](/articles/dw/1024780.md)
-
-7-26 [奥运足球赛开赛连爆丑闻](/articles/dw/1024781.md)
-
-7-26 [巴黎奥运开幕在即 法国高速铁路网遭“大规模袭击“](/articles/dw/1024782.md)
 
