--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-26 [城市的地得｜“房屋养老”，最重要甚至不是钱的问题](/articles/cdt/337659.md)
+
+8-26 [青年志Youthology｜袁凌：边缘人是这个社会的大多数](/articles/cdt/337661.md)
+
 8-26 [【404文库】建设性意见｜全国就2辆罐车混运化工食用油，被记者精准发现了？](/articles/cdt/337664.md)
 
 8-25 [潜水鱼X｜《黑神话：悟空》真的不需要女人吗？](/articles/cdt/337676.md)
@@ -596,8 +600,4 @@
 7-19 [【404文库】【立此存照】新华社｜改革家习近平](/articles/cdt/338763.md)
 
 7-19 [每日一语 2024.7.18](/articles/cdt/338765.md)
-
-7-19 [城市的地得｜有一天我们会对何伟说：欢迎回来](/articles/cdt/338769.md)
-
-7-19 [独角鲸工作坊｜反诈再这么一刀切，普通人的银行卡就快成摆设了](/articles/cdt/338771.md)
 
