--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-26 [中国军队在中缅边境附近展开武装巡逻和实弹演习](/articles/voa/1013074.md)
+
 8-26 [气候困境加剧、地缘政治竞争之际 太平洋岛国论坛在汤加开幕](/articles/voa/1013075.md)
 
 8-26 [开罗的加沙停火谈判未达成协议 消息人士称谈判将持续进行](/articles/voa/1013076.md)
@@ -598,6 +600,4 @@
 8-14 [巴黎奥运会两性别争议拳手夺金牌 华语圈舆论反应大不同](/articles/voa/1013372.md)
 
 8-14 [日本自民党总裁选举将如何影响中日台三角关系？](/articles/voa/1013373.md)
-
-8-14 [莫斯科称俄军对越境乌军实施反击，基辅：战斗持续，战局在握](/articles/voa/1013374.md)
 
