--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 8-26 [【404文库】建设性意见｜全国就2辆罐车混运化工食用油，被记者精准发现了？](/articles/cdt/337664.md)
 
+8-26 [【404文库】虬髯客好忙｜你给储户赋红码，我们写文秒被删](/articles/cdt/337673.md)
+
 8-25 [潜水鱼X｜《黑神话：悟空》真的不需要女人吗？](/articles/cdt/337676.md)
 
 8-25 [每日一语 2024.8.24](/articles/cdt/337685.md)
@@ -598,6 +600,4 @@
 7-19 [虞乐仲｜一代人的思想钢印：仇恨“敌对势力”的70后](/articles/cdt/338759.md)
 
 7-19 [【404文库】丰慢慢｜把他赶下台](/articles/cdt/338761.md)
-
-7-19 [【404文库】【立此存照】新华社｜改革家习近平](/articles/cdt/338763.md)
 
