--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+8-26 [7-Eleven面临收购要约，买下日本“国宝”级便利店有多难](/articles/nyt/1042444.md)
+
+8-26 [为什么欧洲人如此关注美国大选](/articles/nyt/1042445.md)
+
 8-26 [Telegram创始人在法国被捕，引发互联网言论自由之争](/articles/nyt/1042446.md)
 
 8-26 [若中国入侵怎么办？台剧《零日攻击》引发激烈争论](/articles/nyt/1042447.md)
@@ -596,8 +600,4 @@
 5-23 [美众议院“中国问题委员会”要求调查中国游泳队禁药事件](/articles/nyt/1042742.md)
 
 5-23 [郭文贵被控欺诈案在美国开审，涉案金额逾10亿美元](/articles/nyt/1042743.md)
-
-5-23 [从沙皇到中共，“跨国镇压”的前世今生](/articles/nyt/1042744.md)
-
-5-22 [中国主要高铁线路涨价，凸显债务危机深重](/articles/nyt/1042745.md)
 
