--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-26 [学问批判｜官方辟谣了吗？我还是有疑问！](/articles/cdt/337651.md)
+
+8-26 [古老板的老巢｜关于住房养老金，他们都说错了](/articles/cdt/337654.md)
+
 8-26 [每日一语 2024.8.25](/articles/cdt/337657.md)
 
 8-26 [城市的地得｜“房屋养老”，最重要甚至不是钱的问题](/articles/cdt/337659.md)
@@ -596,8 +600,4 @@
 7-20 [鸡蛋bot｜“被指居者”之死：嫌犯身体遭长时间束缚，警方称指居使用械具是惯例](/articles/cdt/338755.md)
 
 7-24 [【CDT周报】第179期：如果负增长也是增长，那开倒车确实也算改革](/articles/cdt/338757.md)
-
-7-19 [虞乐仲｜一代人的思想钢印：仇恨“敌对势力”的70后](/articles/cdt/338759.md)
-
-7-19 [【404文库】丰慢慢｜把他赶下台](/articles/cdt/338761.md)
 
