--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-26 [印度成为俄原油最大买家 乌总统批印度支持俄战争经济](/articles/dw/1024468.md)
+
 8-26 [拼多多控股第二季度净利润大幅增长](/articles/dw/1024469.md)
 
 8-26 [长平观察：从邓小平到习近平，强人政治的时间胶囊](/articles/dw/1024470.md)
@@ -598,6 +600,4 @@
 7-28 [从埃菲尔铁塔、凡尔赛宫到塔西提岛：巴黎奥运赛场绵延三万里](/articles/dw/1024766.md)
 
 7-27 [全球媒体辣评巴黎奥运会开幕式](/articles/dw/1024767.md)
-
-7-27 [美司法部：TikTok收集美国用户敏感信息](/articles/dw/1024768.md)
 
