--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-27 [乌干达拘留21名抗议石油项目并游行走向中国大使馆的环保人士](/articles/voa/1013045.md)
+
+8-27 [特别检察官要求法院恢复对特朗普文件案的指控](/articles/voa/1013046.md)
+
 8-27 [印度尼西亚举行大型多国军事演习](/articles/voa/1013047.md)
 
 8-27 [南非病患涌向停靠在开普敦的中国军队医疗船](/articles/voa/1013048.md)
@@ -596,8 +600,4 @@
 8-15 [分析：岸田文雄重塑日本外交政策，但国内声望却持续低迷](/articles/voa/1013343.md)
 
 8-15 [美海军在印太部署最新型超远程空对空导弹，重新主导投射优势](/articles/voa/1013344.md)
-
-8-15 [外资撤离、石油需求降低 分析:中国经济短期内未见解方](/articles/voa/1013345.md)
-
-8-15 [日本议员团关心“台海有事” 愿强化日台安全交流频率](/articles/voa/1013346.md)
 
