--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-27 [菲律宾称中国是地区和平的“最大破坏者”](/articles/voa/1013043.md)
+
 8-27 [日本政府：中国军机侵犯领空完全不可接受](/articles/voa/1013044.md)
 
 8-27 [乌干达拘留21名抗议石油项目并游行走向中国大使馆的环保人士](/articles/voa/1013045.md)
@@ -598,6 +600,4 @@
 8-15 [中国外长王毅会晤缅甸军政府领导人](/articles/voa/1013341.md)
 
 8-15 [世卫组织宣布猴痘为国际关注的突发公共卫生事件](/articles/voa/1013342.md)
-
-8-15 [分析：岸田文雄重塑日本外交政策，但国内声望却持续低迷](/articles/voa/1013343.md)
 
