--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-27 [星球商业评论｜地下工作大受影响](/articles/cdt/337625.md)
+
+8-27 [后代聊斋｜将孙悟空定位为反抗英雄，才是对他的黑化](/articles/cdt/337628.md)
+
 8-27 [张3丰的世界｜铁头的崛起：流氓爱国就可以畅通无阻？](/articles/cdt/337630.md)
 
 8-27 [每日一语 2024.8.26](/articles/cdt/337634.md)
@@ -596,8 +600,4 @@
 7-21 [凤凰网｜3个月20次洪水，中国陷入“救灾疲惫”时刻](/articles/cdt/338720.md)
 
 7-20 [中国新闻周刊｜突发山洪造成30余人失联，雅安汉源怎么样了？](/articles/cdt/338724.md)
-
-7-20 [建设性意见｜日本首相给当年“计划生育”的受害者鞠躬道歉，并国家赔偿](/articles/cdt/338726.md)
-
-7-20 [阿罗汉有约｜坚定不移](/articles/cdt/338729.md)
 
