--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-27 [Telegram创办人杜洛夫是何人？](/articles/dw/1024460.md)
+
+8-27 [美国印度裔会全力为卡玛拉·哈里斯助选吗？](/articles/dw/1024461.md)
+
 8-27 [王毅会见沙利文 为最后一场拜习会做准备？](/articles/dw/1024462.md)
 
 8-27 [客座评论：中俄之间令人担忧的互动](/articles/dw/1024463.md)
@@ -596,8 +600,4 @@
 7-28 [德语媒体：习近平变成中东总教父？](/articles/dw/1024758.md)
 
 7-28 [戈兰高地以色列占领区遭火箭弹袭击 以誓言让真主党付出沉重代价](/articles/dw/1024759.md)
-
-7-28 [神秘骨骸或能证明日本战争罪行](/articles/dw/1024760.md)
-
-7-28 [比亚迪努力吸引奥地利零配件供应商](/articles/dw/1024761.md)
 
