--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-27 [美军护送菲律宾舰船？美印太司令官持开放态度](/articles/dw/1024457.md)
+
 8-27 [应对移民压力 澳大利亚限制国际学生数量](/articles/dw/1024458.md)
 
 8-27 [中国承认95岁天主教「地下主教」](/articles/dw/1024459.md)
@@ -598,6 +600,4 @@
 7-28 [美日加强军事合作 驻日美军指挥结构升级](/articles/dw/1024755.md)
 
 7-28 [美媒：中国向多国议员施压 阻止其赴台参与峰会](/articles/dw/1024756.md)
-
-7-28 [台灣軍演遇強颱 貼近實戰「不劇透」？](/articles/dw/1024757.md)
 
