--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-27 [联邦法官叫停拜登给予公民非法移民配偶合法身份计划](/articles/voa/1013034.md)
+
 8-27 [香港民主派“47人颠覆案”成员伍健伟当庭称“无悔”，不为信仰与价值观道歉](/articles/voa/1013035.md)
 
 8-27 [中国电影迎寒冬? 暑期档票房腰斩恐折射观众“兜里钱少”困境](/articles/voa/1013036.md)
@@ -598,6 +600,4 @@
 8-15 [泰国宪法法院罢免总理赛塔,美国称希望“尽快”选出新总理。](/articles/voa/1013332.md)
 
 8-15 [禾赛科技据报将从五角大楼黑名单除名 美国会共和党人: “这是送给一个由中共控制的公司的礼物”](/articles/voa/1013333.md)
-
-8-15 [巴西总统卢拉对与中国的“长期伙伴关系”表示认可](/articles/voa/1013334.md)
 
