--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-28 [香港民主派初选47人案梁国雄等被告首日求情 多名旁听人士冀尽快判刑](/articles/voa/1013030.md)
+
 8-28 [外来人口增长过快推高房租，澳政府出台措施限制国际学生录取人数](/articles/voa/1013031.md)
 
 8-28 [巴基斯坦总理：分离武装分子袭击旨在破坏中巴经济走廊项目](/articles/voa/1013032.md)
@@ -598,6 +600,4 @@
 8-15 [缅甸军政府：中国承诺为缅甸选举提供援助](/articles/voa/1013328.md)
 
 8-15 [韩国总统尹锡悦寻求平壤对话 倡议“自由统一的国家”](/articles/voa/1013329.md)
-
-8-15 [哥伦比亚大学校长宣布辞职](/articles/voa/1013330.md)
 
