--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-28 [乌克兰称控制俄罗斯库尔斯克地区的大片土地](/articles/voa/1013028.md)
+
+8-28 [中国军机侵入日本领空会使两国关系进一步恶化吗？](/articles/voa/1013029.md)
+
 8-28 [香港民主派初选47人案梁国雄等被告首日求情 多名旁听人士冀尽快判刑](/articles/voa/1013030.md)
 
 8-28 [外来人口增长过快推高房租，澳政府出台措施限制国际学生录取人数](/articles/voa/1013031.md)
@@ -596,8 +600,4 @@
 8-15 [多位日本内阁大臣在日本战败纪念日参拜有争议的靖国神社](/articles/voa/1013326.md)
 
 8-15 [台资巴黎长荣桂冠酒店拒挂五星旗 中国网民怒喊抵制](/articles/voa/1013327.md)
-
-8-15 [缅甸军政府：中国承诺为缅甸选举提供援助](/articles/voa/1013328.md)
-
-8-15 [韩国总统尹锡悦寻求平壤对话 倡议“自由统一的国家”](/articles/voa/1013329.md)
 
