--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-28 [知识分子｜在精神科门诊里，孩子们的年纪越来越小](/articles/cdt/337613.md)
+
 8-27 [星球商业评论｜地下工作大受影响](/articles/cdt/337625.md)
 
 8-27 [【网络民议】“外资今天对A股爱答不理，明天就让他们高攀不起”](/articles/cdt/337626.md)
@@ -598,6 +600,4 @@
 7-21 [爱写写的二娃妈｜李医生的死，不会改变什么](/articles/cdt/338715.md)
 
 7-21 [南方周末｜多名被“指居”者死亡，背后的制度陷存废之争](/articles/cdt/338718.md)
-
-7-21 [凤凰网｜3个月20次洪水，中国陷入“救灾疲惫”时刻](/articles/cdt/338720.md)
 
