--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-28 [联合国批评新疆人权政策“有问题”](/articles/voa/1013025.md)
+
 8-28 [联合国发表更新的新疆人权报告，呼吁中国对法律政策进行全面审查](/articles/voa/1013026.md)
 
 8-28 [以色列解救了另一名被哈马斯扣押在加沙的人质](/articles/voa/1013027.md)
@@ -598,6 +600,4 @@
 8-15 [巴黎台资酒店未挂五星旗遭中国网红抵制，台陆委会:利用民族主义赚流量只会让国际反感](/articles/voa/1013323.md)
 
 8-15 [房地产业低迷及消费疲软持续拖累中国经济复苏增长](/articles/voa/1013324.md)
-
-8-15 [基里巴斯亲中总统首轮大选投票保住议员席次，为其竞选连任铺平道路](/articles/voa/1013325.md)
 
