--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-28 [人物｜当AI入侵大学论文](/articles/cdt/337607.md)
+
+8-28 [正面连接｜一个基层科员的官场修养](/articles/cdt/337609.md)
+
+8-28 [槽边往事｜我不理解](/articles/cdt/337611.md)
+
 8-28 [知识分子｜在精神科门诊里，孩子们的年纪越来越小](/articles/cdt/337613.md)
 
 8-27 [星球商业评论｜地下工作大受影响](/articles/cdt/337625.md)
@@ -594,10 +600,4 @@
 7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
 
 7-22 [北青深一度｜陕西高速桥垮塌获救者：和工友返乡途中，只有他打开了车窗](/articles/cdt/338705.md)
-
-7-22 [【CDT报告汇】新时代中共治藏策略：强化以大汉族主义为基础的民族同化政策（外二篇）](/articles/cdt/338711.md)
-
-7-21 [爱写写的二娃妈｜李医生的死，不会改变什么](/articles/cdt/338715.md)
-
-7-21 [南方周末｜多名被“指居”者死亡，背后的制度陷存废之争](/articles/cdt/338718.md)
 
