--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-28 [【404视频】章北海official｜互联网不信任网证网号，历史记住河南红码](/articles/cdt/337602.md)
+
 8-28 [人物｜当AI入侵大学论文](/articles/cdt/337607.md)
 
 8-28 [正面连接｜一个基层科员的官场修养](/articles/cdt/337609.md)
@@ -598,6 +600,4 @@
 7-22 [莽莽｜失语中国：被噤声的公共知识分子们](/articles/cdt/338701.md)
 
 7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
-
-7-22 [北青深一度｜陕西高速桥垮塌获救者：和工友返乡途中，只有他打开了车窗](/articles/cdt/338705.md)
 
