--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-28 [拜登顾问会见卡塔尔领导人，商讨以色列与哈马斯谈判](/articles/voa/1013019.md)
+
 8-28 [朝鲜试射采用新型“制导系统”的240毫米火箭炮](/articles/voa/1013020.md)
 
 8-28 [非洲猴痘疫情爆发对难民和流离失所社区构成风险](/articles/voa/1013021.md)
@@ -598,6 +600,4 @@
 8-16 [北京将中国货轮损毁波罗的海油气管道归咎于“意外风暴”，当地人仍怀疑“蓄意破坏”](/articles/voa/1013317.md)
 
 8-16 [加沙停火谈判人员希望达成停火协议，避免中东陷入更大规模战争](/articles/voa/1013318.md)
-
-8-16 [乌军控制俄本土区域还在扩大，坚守难度日益凸显](/articles/voa/1013319.md)
 
