--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-28 [特朗普和贺锦丽都选择拥抱关税，具体政策有何不同](/articles/nyt/1042435.md)
+
 8-28 [沪式“黄昏恋”：在人民公园和宜家餐厅寻找爱情](/articles/nyt/1042436.md)
 
 8-28 [沙利文访华会见王毅，或为最后一次“习拜会”铺路](/articles/nyt/1042437.md)
@@ -598,6 +600,4 @@
 5-27 [“香港间谍案”背后，英国香港侨民群体的焦虑和担忧](/articles/nyt/1042733.md)
 
 5-27 [七国集团财长对中国廉价出口产品发出警告](/articles/nyt/1042734.md)
-
-5-27 [耳目与监控：习近平如何将系统性控制嵌入中国人日常生活](/articles/nyt/1042735.md)
 
