--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-28 [太平洋岛国批准澳大利亚资助的2.7亿美元区域警务计划](/articles/voa/1013017.md)
+
+8-28 [沙利文与中国官员举行第二天会谈，涉及台湾、芬太尼等议题](/articles/voa/1013018.md)
+
 8-28 [拜登顾问会见卡塔尔领导人，商讨以色列与哈马斯谈判](/articles/voa/1013019.md)
 
 8-28 [朝鲜试射采用新型“制导系统”的240毫米火箭炮](/articles/voa/1013020.md)
@@ -596,8 +600,4 @@
 8-16 [中国将限制锑出口，该矿物质可用于电池和武器](/articles/voa/1013315.md)
 
 8-16 [美国继续打击胡塞武装和真主党贸易网，制裁对象包括一家香港船运公司及其油轮](/articles/voa/1013316.md)
-
-8-16 [北京将中国货轮损毁波罗的海油气管道归咎于“意外风暴”，当地人仍怀疑“蓄意破坏”](/articles/voa/1013317.md)
-
-8-16 [加沙停火谈判人员希望达成停火协议，避免中东陷入更大规模战争](/articles/voa/1013318.md)
 
