--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-28 [美国政府研究人员考察韩国钨矿，美中关键矿产竞争日趋激烈](/articles/voa/1013010.md)
+
 8-28 [中国“社会火山”正在酝酿 分析：最怕底层互害](/articles/voa/1013011.md)
 
 8-28 [强大台风“珊珊”袭来，日本下令多个地区百万居民撤离](/articles/voa/1013012.md)
@@ -598,6 +600,4 @@
 8-16 [拜登关于委内瑞拉的评论引发对美国政策的疑问](/articles/voa/1013308.md)
 
 8-16 [菲律宾空军基地升级有望对中国的咄咄逼人行动起到遏阻作用](/articles/voa/1013309.md)
-
-8-16 [白宫:最新加沙停火会谈有着“很有希望的开端”](/articles/voa/1013310.md)
 
