--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-29 [“北京自己人”、澳门前终审法院院长岑浩辉宣布“参选”澳门特首](/articles/voa/1013007.md)
+
+8-29 [乌克兰无人机击中俄油库，并远程袭击1500公里外目标](/articles/voa/1013008.md)
+
+8-29 [“被中国不公正拘留的美国人”亲属将在美国会中国委员会听证会上作证](/articles/voa/1013009.md)
+
 8-28 [美国政府研究人员考察韩国钨矿，美中关键矿产竞争日趋激烈](/articles/voa/1013010.md)
 
 8-28 [中国“社会火山”正在酝酿 分析：最怕底层互害](/articles/voa/1013011.md)
@@ -594,10 +600,4 @@
 8-16 [台湾又发生一次强震，暂未听说造成损害](/articles/voa/1013305.md)
 
 8-16 [前澳大利亚总理称台湾是“中国的不动产” 佩洛西严厉批评：“愚蠢、荒谬”](/articles/voa/1013306.md)
-
-8-16 [万斯和沃尔兹同意10月1日进行副总统辩论；哈里斯提出与特朗普进行两场辩论](/articles/voa/1013307.md)
-
-8-16 [拜登关于委内瑞拉的评论引发对美国政策的疑问](/articles/voa/1013308.md)
-
-8-16 [菲律宾空军基地升级有望对中国的咄咄逼人行动起到遏阻作用](/articles/voa/1013309.md)
 
