--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-6 [每日一语 2024.9.4](/articles/cdt/337374.md)
+
 9-5 [情况有点复杂｜第14天坐牢，无人知晓他何等罪名](/articles/cdt/337376.md)
 
 9-5 [老萧杂说｜凭啥宣誓“不对老师甩脸子”，凭啥承诺对霸凌“不拍不录”](/articles/cdt/337378.md)
@@ -598,6 +600,4 @@
 7-30 [【404文库】劳东燕｜“网号网证”是给每个网民安上的监视器](/articles/cdt/338424.md)
 
 7-30 [每日一语 2024.7.29](/articles/cdt/338426.md)
-
-7-29 [星球商业评论｜小马和他们不一样](/articles/cdt/338430.md)
 
