--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-6 [亨特·拜登对九项联邦税收指控认罪，可能面临长期监禁](/articles/nyt/1042406.md)
+
 9-6 [对人工智能的痴迷可能导致民主的终结](/articles/nyt/1042407.md)
 
 9-5 [中非合作论坛：习近平打造“发展中国家捍卫者”形象](/articles/nyt/1042408.md)
@@ -598,6 +600,4 @@
 6-5 [在加速崩塌的中国互联网上，正在消失的集体记忆](/articles/nyt/1042704.md)
 
 6-5 [为什么说新冠病毒可能是从武汉病毒研究所泄漏的](/articles/nyt/1042705.md)
-
-6-4 [《大纪元时报》高管涉嫌洗钱在美国被捕](/articles/nyt/1042706.md)
 
