--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-6 [中國男足對戰日本史上最慘敗 實力差距多大？](/articles/dw/1024370.md)
+
 9-5 [慕尼黑警方在以领馆前击毙一名涉嫌伊斯兰主义者](/articles/dw/1024371.md)
 
 9-5 [客座评论：拜登未来几周会访华吗](/articles/dw/1024372.md)
@@ -598,6 +600,4 @@
 8-7 [日本滑板称霸巴黎奥运 在本土为何受冷眼？](/articles/dw/1024668.md)
 
 8-7 [賀錦麗搭檔沃爾茲對華立場軟還是硬?](/articles/dw/1024669.md)
-
-8-6 [客座评论：赖清德需要Plan B](/articles/dw/1024670.md)
 
