--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-6 [欧盟气候监测机构：2024年6月至8月是有史以来最热的夏季](/articles/voa/1012795.md)
+
 9-6 [亨特·拜登对联邦税务指控认罪，称不想让家人再承受痛苦](/articles/voa/1012796.md)
 
 9-6 [北京为何会对纽约州政府一位中层助理感兴趣？](/articles/voa/1012797.md)
@@ -598,6 +600,4 @@
 8-25 [德国警察逮捕致命持刀攻击的嫌疑人 伊斯兰国声称对攻击负责](/articles/voa/1013093.md)
 
 8-25 [禾赛美国“维权”成功，中微效仿，美国防部证明中企“涉军”为何困难重重？](/articles/voa/1013094.md)
-
-8-25 [苏丹军方首领不会参加苏丹和平谈判，誓言“将战斗一百年”](/articles/voa/1013095.md)
 
