--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-6 [美国担心日本制铁收购美国钢铁公司或影响重要的钢铁供应](/articles/voa/1012793.md)
+
 9-6 [岸田文雄对韩国进行告别访问 巩固其改善日韩关系政治遗产](/articles/voa/1012794.md)
 
 9-6 [欧盟气候监测机构：2024年6月至8月是有史以来最热的夏季](/articles/voa/1012795.md)
@@ -598,6 +600,4 @@
 8-25 [Telegram首席执行官杜罗夫于法国被逮捕 将接受调查](/articles/voa/1013091.md)
 
 8-25 [法国南部犹太教堂纵火案疑为恐怖袭击 嫌犯遭捕](/articles/voa/1013092.md)
-
-8-25 [德国警察逮捕致命持刀攻击的嫌疑人 伊斯兰国声称对攻击负责](/articles/voa/1013093.md)
 
