--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-6 [中国绿能产品产能过剩？非洲正需要](/articles/dw/1024367.md)
+
 9-6 [中国国足:辜负了总书记的期望](/articles/dw/1024368.md)
 
 9-6 [翻墙罚款9000美元 巴西新规引爆争议](/articles/dw/1024369.md)
@@ -598,6 +600,4 @@
 8-7 [国泰航空宣布购买至少30架空客A330-900飞机](/articles/dw/1024665.md)
 
 8-7 [“咖喱香肠”为何能成为德国国民小吃？](/articles/dw/1024666.md)
-
-8-7 [“换囚行动”人质里克专访：“我一直期盼德国的帮助”](/articles/dw/1024667.md)
 
