--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-7 [前纽约州长高级助理被逮捕 被控为中国政府谋取利益](/articles/dw/1024364.md)
+
 9-6 [涉嫌参与在中国的欺诈项目 德国环境局拒发德企气候证书](/articles/dw/1024365.md)
 
 9-6 [德企在中国投资研发热情不减](/articles/dw/1024366.md)
@@ -598,6 +600,4 @@
 8-7 [向许家印等人追讨60亿美元后 恒大清盘人再起诉普华永道](/articles/dw/1024662.md)
 
 8-7 [哈马斯任命辛瓦尔为其新领导人](/articles/dw/1024663.md)
-
-8-7 [孟加拉国临时领导人：诺贝尔和平奖得主尤努斯](/articles/dw/1024664.md)
 
