--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-7 [美英情报负责人联合呼吁加沙停火、坚持对乌克兰的支持](/articles/voa/1012762.md)
+
+9-7 [联合国安理会考虑为海地规划维和行动](/articles/voa/1012763.md)
+
 9-7 [波音公司的“星际客机”在无人驾驶的情况下返回地球](/articles/voa/1012764.md)
 
 9-7 [超强台风“摩羯”袭击中国海南，造成2人死亡](/articles/voa/1012765.md)
@@ -596,8 +600,4 @@
 8-27 [香港初中课程新增习近平思想 教师称学生全方位受影响](/articles/voa/1013060.md)
 
 8-27 [IMB证实将停止在中国的研发业务，雇员披露或涉及逾千岗位](/articles/voa/1013061.md)
-
-8-27 [菲律宾谴责中国一周内在南中国海咄咄逼人及危险行为](/articles/voa/1013062.md)
-
-8-27 [京人治澳？澳门终审法院院长岑浩辉料竞逐特首](/articles/voa/1013063.md)
 
