--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-7 [中国无力支薪网格员 分析：但维稳力度绝不放松](/articles/voa/1012760.md)
+
+9-7 [世界媒体看中国: 习近平有多英明](/articles/voa/1012761.md)
+
 9-7 [美英情报负责人联合呼吁加沙停火、坚持对乌克兰的支持](/articles/voa/1012762.md)
 
 9-7 [联合国安理会考虑为海地规划维和行动](/articles/voa/1012763.md)
@@ -596,8 +600,4 @@
 8-27 [日本国会亲中团体访华 专家: 效果恐有限](/articles/voa/1013058.md)
 
 8-27 [聿文视界: 中国内部溃烂的状态评估](/articles/voa/1013059.md)
-
-8-27 [香港初中课程新增习近平思想 教师称学生全方位受影响](/articles/voa/1013060.md)
-
-8-27 [IMB证实将停止在中国的研发业务，雇员披露或涉及逾千岗位](/articles/voa/1013061.md)
 
