--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-7 [乌克兰空军击落58架俄军，新外长呼吁西方增加军援解除武器限制](/articles/voa/1012756.md)
+
+9-7 [韩正步普京后尘访问蒙古 力推商贸不提敏感话题](/articles/voa/1012757.md)
+
+9-7 [专访戴晴：六四事件背后，邓小平陈云的权力斗争](/articles/voa/1012758.md)
+
 9-7 [伊朗若成功拥核，中国“功不可没”，而美国或被赶出中东？](/articles/voa/1012759.md)
 
 9-7 [中国无力支薪网格员 分析：但维稳力度绝不放松](/articles/voa/1012760.md)
@@ -594,10 +600,4 @@
 8-27 [法国总统马克龙：逮捕电报信息应用负责人不是政治行为](/articles/voa/1013054.md)
 
 8-27 [中国公安切断独立记者高瑜所有通讯联系和网络](/articles/voa/1013055.md)
-
-8-27 [继美国之后，加拿大将对中国电动汽车征收100%关税](/articles/voa/1013056.md)
-
-8-27 [美国认为以色列仍受到伊朗及其代理人的“攻击威胁”](/articles/voa/1013057.md)
-
-8-27 [日本国会亲中团体访华 专家: 效果恐有限](/articles/voa/1013058.md)
 
