--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-8 [习近平承诺向非洲提供巨额信贷，但对债务减免呼声却充耳不闻](/articles/voa/1012755.md)
+
 9-7 [乌克兰空军击落58架俄军，新外长呼吁西方增加军援解除武器限制](/articles/voa/1012756.md)
 
 9-7 [韩正步普京后尘访问蒙古 力推商贸不提敏感话题](/articles/voa/1012757.md)
@@ -598,6 +600,4 @@
 8-27 [要不要静音麦克风？特朗普和哈里斯在辩论前起争执](/articles/voa/1013053.md)
 
 8-27 [法国总统马克龙：逮捕电报信息应用负责人不是政治行为](/articles/voa/1013054.md)
-
-8-27 [中国公安切断独立记者高瑜所有通讯联系和网络](/articles/voa/1013055.md)
 
