--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-8 [受害者家人要求调查以色列军方打死美国人](/articles/voa/1012752.md)
+
 9-8 [教宗方济各巡访亚太四国 也“非常想”去中国](/articles/voa/1012753.md)
 
 9-8 [欧盟经济专员：欧洲经济避免了最坏情况，现在必须处理对华贸易关系](/articles/voa/1012754.md)
@@ -598,6 +600,4 @@
 8-27 [以色列最新撤离令中断了联合国在加沙的援助行动](/articles/voa/1013050.md)
 
 8-27 [西雅图机场显然因遭网络袭击而发生重大断网](/articles/voa/1013051.md)
-
-8-27 [美国对伊朗警察据报枪击违反头巾法律的妇女“深表关切”](/articles/voa/1013052.md)
 
