--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-8 [余编编余｜国社科重大项目“中国足球事业发展战略与对策研究”（双课题组）大事记](/articles/cdt/337319.md)
+
 9-7 [猛犸工作室｜月薪三万的陆家嘴打工人，抠抠搜搜](/articles/cdt/337324.md)
 
 9-7 [剑客写字的地方｜底层互害，越来越魔幻了](/articles/cdt/337330.md)
@@ -598,6 +600,4 @@
 8-3 [【CDT报告汇】华日：美中专家普遍认为贺锦丽当选将延续拜登的对华政策（外二篇）](/articles/cdt/338357.md)
 
 8-1 [新新默存｜温克坚：举债的艺术](/articles/cdt/338374.md)
-
-8-1 [【404文库】阿喀琉斯与龟｜我担心哪天我的上网证被吊销了](/articles/cdt/338375.md)
 
