--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-8 [大众CEO:节约势在必行 左翼党主席:请退还股息](/articles/dw/1024349.md)
+
 9-8 [巴西：封禁X平台引发的抗议浪潮加剧](/articles/dw/1024350.md)
 
 9-8 [普京：我家里有小孩能说流利的中文](/articles/dw/1024351.md)
@@ -598,6 +600,4 @@
 8-9 [美国取代中国 成为德国最重要贸易伙伴](/articles/dw/1024647.md)
 
 8-9 [大熊猫重返圣地亚哥动物园](/articles/dw/1024648.md)
-
-8-9 [普京执掌俄罗斯的四分之一个世纪](/articles/dw/1024649.md)
 
