--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-8 [继锗和镓后，中国限制稀有战略金属锑的出口，美国会被“报复”到吗？](/articles/voa/1012740.md)
+
+9-8 [约旦和西岸边境口岸发生以哈冲突以来首次袭击，枪手打死三名以色列平民](/articles/voa/1012741.md)
+
 9-8 [中国高考制度优待“皇亲国戚”？](/articles/voa/1012742.md)
 
 9-8 [教宗方济各为巴布亚新几内亚偏远丛林带来援助](/articles/voa/1012743.md)
@@ -596,8 +600,4 @@
 8-27 [美国国家安全顾问访华 即将离任的拜登政府对美中关系还有多大的影响力？](/articles/voa/1013038.md)
 
 8-27 [路透社：台湾内部报告显示中国2023年在西太平洋的军事演习耗资153亿美元](/articles/voa/1013039.md)
-
-8-27 [美国安顾问沙利文访问北京 试图管控紧张的美中关系](/articles/voa/1013040.md)
-
-8-27 [拼多多发布第二季度财报：营收不及预期，股价暴跌逾28%](/articles/voa/1013041.md)
 
