--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-9 [内塔尼亚胡在战争进入第12个月之际誓言继续打击哈马斯](/articles/voa/1012737.md)
+
 9-9 [俄乌相互指责对方空袭边境地区，俄军称继续向乌东波克罗夫斯克推进](/articles/voa/1012738.md)
 
 9-8 [委内瑞拉反对党领导人获西班牙庇护后搭机前往马德里](/articles/voa/1012739.md)
@@ -598,6 +600,4 @@
 8-27 [香港民主派“47人颠覆案”成员伍健伟当庭称“无悔”，不为信仰与价值观道歉](/articles/voa/1013035.md)
 
 8-27 [中国电影迎寒冬? 暑期档票房腰斩恐折射观众“兜里钱少”困境](/articles/voa/1013036.md)
-
-8-27 [沙利文抵京当天，中国批美“非法单边”制裁支持俄乌战争的公司](/articles/voa/1013037.md)
 
