--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-9 [“一个时代的终结”：中国不再允许外国家庭收养中国儿童](/articles/nyt/1042403.md)
+
 9-6 [当发出声音都不被允许：塔利班新法令阿富汗女性绝望](/articles/nyt/1042404.md)
 
 9-6 [美国大选结果或左右中美气候谈判前景](/articles/nyt/1042405.md)
@@ -598,6 +600,4 @@
 6-6 [“五眼联盟”警告前战斗机飞行员不要帮助培训解放军](/articles/nyt/1042701.md)
 
 6-5 [拜登移民政策逆转，限制寻求庇护者入境美国](/articles/nyt/1042702.md)
-
-6-5 [解读印度大选：莫迪再次连任，但不再不可战胜](/articles/nyt/1042703.md)
 
