--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-9 [每日一语 2024.9.8](/articles/cdt/337305.md)
+
 9-9 [【404文库】“砸了今日锅，去还昨日债，谁为明日忧？”（外二篇）](/articles/cdt/337309.md)
 
 9-9 [每日一语 2024.9.7](/articles/cdt/337314.md)
@@ -598,6 +600,4 @@
 8-2 [现代快报｜烟草局招聘被质疑“萝卜坑”，官方回应“是企业实际需要”](/articles/cdt/338342.md)
 
 8-2 [【404文库】南方都市报｜网证网号来了？两部门新规征求意见引争论，试点APP已上线](/articles/cdt/338346.md)
-
-8-2 [【404文库】沈岿&劳东燕｜关于《国家网络身份认证公共服务管理办法（征求意见稿）》的意见](/articles/cdt/338349.md)
 
