--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-9 [招手外商救經濟？中國放寬製造與醫療業限制](/articles/dw/1024347.md)
+
 9-8 [媒体：美国相信伊朗向俄罗斯转让了短程弹道导弹](/articles/dw/1024348.md)
 
 9-8 [大众CEO:节约势在必行 左翼党主席:请退还股息](/articles/dw/1024349.md)
@@ -598,6 +600,4 @@
 8-9 [媒体：一名加拿大人涉嫌为中国从事间谍活动](/articles/dw/1024645.md)
 
 8-9 [盗卖人体尸骨 中国多地殡仪馆涉案](/articles/dw/1024646.md)
-
-8-9 [美国取代中国 成为德国最重要贸易伙伴](/articles/dw/1024647.md)
 
