--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 9-9 [正面连接｜我与权力的距离](/articles/cdt/337300.md)
 
+9-9 [谷雨实验室｜开拓中国女性研究的人，不想当女性主义者](/articles/cdt/337301.md)
+
 9-9 [【404文库】老干体v｜上半年财政缺口5.7万亿，8000万公职嗷嗷待哺，监委南下「远洋捕捞」](/articles/cdt/337303.md)
 
 9-9 [每日一语 2024.9.8](/articles/cdt/337305.md)
@@ -598,6 +600,4 @@
 8-4 [【CDT周报】第181期：我担心哪天我的上网证被吊销了](/articles/cdt/338323.md)
 
 8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
-
-8-3 [有马体育｜伤中泳：中国游泳队疑云](/articles/cdt/338330.md)
 
