--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-9 [美国财长耶伦：下届政府应将美中关系立为“优先事项”](/articles/dw/1024344.md)
+
 9-9 [美媒：秦刚被任命出版社低阶职务](/articles/dw/1024345.md)
 
 9-9 [1972慕尼黑惨案周年之际 一名枪手被击毙](/articles/dw/1024346.md)
@@ -598,6 +600,4 @@
 8-9 [菲律宾和越南举行海上联合演习](/articles/dw/1024642.md)
 
 8-9 [从骚乱到”和平之夜“——英国暴力杀人事件后发生了什么？](/articles/dw/1024643.md)
-
-8-9 [参与策划泰勒·斯威夫特恐袭案第三名嫌疑人在维也纳被捕](/articles/dw/1024644.md)
 
