--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-9 [聿文视界：社会主义接班人还是掘墓人？中共全盘政治化的“培养接班人”教育](/articles/voa/1012727.md)
+
+9-9 [中国华兴资本恢复交易后股价暴跌 前景因前执行官遭调查而蒙上阴影](/articles/voa/1012728.md)
+
 9-9 [西班牙首相桑切斯将与习近平会面 盼促进经贸关系](/articles/voa/1012729.md)
 
 9-9 [中国8月消费者价格上涨 生产者价格指数持续处于通缩](/articles/voa/1012730.md)
@@ -596,8 +600,4 @@
 8-28 [联合国批评新疆人权政策“有问题”](/articles/voa/1013025.md)
 
 8-28 [联合国发表更新的新疆人权报告，呼吁中国对法律政策进行全面审查](/articles/voa/1013026.md)
-
-8-28 [以色列解救了另一名被哈马斯扣押在加沙的人质](/articles/voa/1013027.md)
-
-8-28 [乌克兰称控制俄罗斯库尔斯克地区的大片土地](/articles/voa/1013028.md)
 
