--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-9 [明镜周刊：德军舰艇将穿越台海](/articles/dw/1024343.md)
+
 9-9 [美国财长耶伦：下届政府应将美中关系立为“优先事项”](/articles/dw/1024344.md)
 
 9-9 [美媒：秦刚被任命出版社低阶职务](/articles/dw/1024345.md)
@@ -598,6 +600,4 @@
 8-10 [巴西客机坠毁 机上61人全部遇难](/articles/dw/1024641.md)
 
 8-9 [菲律宾和越南举行海上联合演习](/articles/dw/1024642.md)
-
-8-9 [从骚乱到”和平之夜“——英国暴力杀人事件后发生了什么？](/articles/dw/1024643.md)
 
