--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-9 [媒体称德国海军舰艇编队本月中将过航台湾海峡，北京当局对此表达不满](/articles/voa/1012726.md)
+
 9-9 [聿文视界：社会主义接班人还是掘墓人？中共全盘政治化的“培养接班人”教育](/articles/voa/1012727.md)
 
 9-9 [中国华兴资本恢复交易后股价暴跌 前景因前执行官遭调查而蒙上阴影](/articles/voa/1012728.md)
@@ -598,6 +600,4 @@
 8-28 [美国敦促某些“消极行为者”不要助长苏丹内战](/articles/voa/1013024.md)
 
 8-28 [联合国批评新疆人权政策“有问题”](/articles/voa/1013025.md)
-
-8-28 [联合国发表更新的新疆人权报告，呼吁中国对法律政策进行全面审查](/articles/voa/1013026.md)
 
