--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-9 [观人随笔｜他死了，没有然后](/articles/cdt/337254.md)
+
+9-9 [特正经的张某某｜“一个中国班级，放弃班委是否可能”及其深层逻辑](/articles/cdt/337257.md)
+
+9-9 [凤凰WEEKLY｜月薪三万，躲不过「垃圾站外卖」](/articles/cdt/337260.md)
+
 9-9 [亮见｜就业市场又遭重锤](/articles/cdt/337262.md)
 
 9-9 [四环青年｜日本游客在圆明园拍照遭网红骚扰，爱国流量快被这些人玩坏了](/articles/cdt/337268.md)
@@ -594,10 +600,4 @@
 8-5 [莽莽｜港狱虹援：铁窗内外的跨儿行动者](/articles/cdt/338290.md)
 
 8-4 [【重温】米米亚娜｜逃离体制](/articles/cdt/338297.md)
-
-8-4 [歪脑｜逐渐把不住风向的胡锡进和养蛊反噬的宣传标兵《环球时报》](/articles/cdt/338300.md)
-
-8-3 [四环青年｜地面塌陷记者采访遭反问为何报道，让人哭笑不得](/articles/cdt/338304.md)
-
-8-3 [维舟｜总得有人发出点不同的声音](/articles/cdt/338307.md)
 
