--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-9 [中国宣扬“飞虎精神”向美示好”？ 观察人士：两强相斗难止歇](/articles/voa/1012720.md)
+
+9-9 [消费信心仍疲软，中国八月份乘用车零售量连续五个月下跌](/articles/voa/1012721.md)
+
+9-9 [联合国人权事务高级专员：加沙停火“刻不容缓”](/articles/voa/1012722.md)
+
 9-9 [香港知名会计行被投诉非法协助港府清盘壹传媒](/articles/voa/1012723.md)
 
 9-9 [防范“敏感人士”踏足香港 港府筛查航班旅客可拒登机](/articles/voa/1012724.md)
@@ -594,10 +600,4 @@
 8-28 [沙利文与中国官员举行第二天会谈，涉及台湾、芬太尼等议题](/articles/voa/1013018.md)
 
 8-28 [拜登顾问会见卡塔尔领导人，商讨以色列与哈马斯谈判](/articles/voa/1013019.md)
-
-8-28 [朝鲜试射采用新型“制导系统”的240毫米火箭炮](/articles/voa/1013020.md)
-
-8-28 [非洲猴痘疫情爆发对难民和流离失所社区构成风险](/articles/voa/1013021.md)
-
-8-28 [国际援助组织担心在加沙的行动濒临崩溃](/articles/voa/1013022.md)
 
