--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-10 [塞浦路斯与美国签署防务合作框架协议以应对地区危机](/articles/voa/1012713.md)
+
 9-10 [报道：一名被控充当中国代理人的美智库负责人将被引渡至美国](/articles/voa/1012714.md)
 
 9-10 [乌克兰召见伊朗外交官，抗议伊朗可能向俄罗斯运送导弹](/articles/voa/1012715.md)
@@ -598,6 +600,4 @@
 8-28 [中国“社会火山”正在酝酿 分析：最怕底层互害](/articles/voa/1013011.md)
 
 8-28 [强大台风“珊珊”袭来，日本下令多个地区百万居民撤离](/articles/voa/1013012.md)
-
-8-28 [以军称在西岸展开反恐行动，打死九名武装分子](/articles/voa/1013013.md)
 
