--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-10 [贺锦丽与特朗普辩论前瞻：关乎美国未来的九大问题](/articles/nyt/1042400.md)
+
 9-9 [中国农村“外嫁女”如何争取土地权益](/articles/nyt/1042401.md)
 
 9-9 [美国是时候加大对核武库的投资了](/articles/nyt/1042402.md)
@@ -598,6 +600,4 @@
 6-6 [健康杀手还是被夸大的风险：你了解“超加工食品”吗](/articles/nyt/1042698.md)
 
 6-6 [欧洲经济为何无力与美中竞争](/articles/nyt/1042699.md)
-
-6-6 [中国政府拯救楼市的做法惹恼了谁](/articles/nyt/1042700.md)
 
