--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-10 [人权观察联手艾未未推出新作义卖](/articles/dw/1024340.md)
+
+9-10 [蘋果跟華為「打對台」 中國消費者更屬意誰？](/articles/dw/1024341.md)
+
 9-9 [国安忧虑：美佐治亚理工将退出与天津大学合作](/articles/dw/1024342.md)
 
 9-9 [明镜周刊：德军舰艇将穿越台海](/articles/dw/1024343.md)
@@ -596,8 +600,4 @@
 8-10 [以色列空袭加沙一学校 哈马斯称逾百人丧生](/articles/dw/1024638.md)
 
 8-10 [阿尔及利亚拳击手奥运摘金 再次回应性别争议](/articles/dw/1024639.md)
-
-8-10 [肖尔茨：巴黎激励德国申办奥运会](/articles/dw/1024640.md)
-
-8-10 [巴西客机坠毁 机上61人全部遇难](/articles/dw/1024641.md)
 
