--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-10 [与贺锦丽辩论，特朗普将咆哮着走向失败](/articles/nyt/1042398.md)
+
 9-10 [苹果推出首款人工智能iPhone](/articles/nyt/1042399.md)
 
 9-10 [贺锦丽与特朗普辩论前瞻：关乎美国未来的九大问题](/articles/nyt/1042400.md)
@@ -598,6 +600,4 @@
 6-7 [美国恢复对东南亚太阳能产品征收关税，剑指中国](/articles/nyt/1042696.md)
 
 6-7 [SpaceX重型火箭“星舰”第四次试飞成功](/articles/nyt/1042697.md)
-
-6-6 [健康杀手还是被夸大的风险：你了解“超加工食品”吗](/articles/nyt/1042698.md)
 
