--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-10 [华为推出三折叠智能手机，加剧与苹果在中国市场的竞争](/articles/voa/1012700.md)
+
+9-10 [金正恩在朝鲜建国纪念日誓言 将呈“几何级数”增加核武](/articles/voa/1012701.md)
+
 9-10 [联合国可能于下星期表决 要求以色列结束占领巴勒斯坦领土](/articles/voa/1012702.md)
 
 9-10 [美国众议院投票禁止大疆新无人机](/articles/voa/1012703.md)
@@ -596,8 +600,4 @@
 8-29 [两名共和党议员要求五角大楼将中国电池制造商宁德时代列入限制名单](/articles/voa/1012998.md)
 
 8-29 [美国进入“新核时代”：一文读懂没有硝烟的美中核博弈](/articles/voa/1012999.md)
-
-8-29 [中俄北极合作引发担忧](/articles/voa/1013000.md)
-
-8-29 [中国核武库迅速扩张迫使美国修订核威慑战略？](/articles/voa/1013001.md)
 
