--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-10 [巴黎2024——残奥会带来的感动](/articles/dw/1024339.md)
+
 9-10 [人权观察联手艾未未推出新作义卖](/articles/dw/1024340.md)
 
 9-10 [蘋果跟華為「打對台」 中國消費者更屬意誰？](/articles/dw/1024341.md)
@@ -598,6 +600,4 @@
 8-10 [印尼：对“中国制造”说不](/articles/dw/1024637.md)
 
 8-10 [以色列空袭加沙一学校 哈马斯称逾百人丧生](/articles/dw/1024638.md)
-
-8-10 [阿尔及利亚拳击手奥运摘金 再次回应性别争议](/articles/dw/1024639.md)
 
