--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-11 [美国印太司令警告北京不要在南中国海采取“危险行动”](/articles/voa/1012689.md)
+
 9-11 [特朗普、哈里斯首场辩论将重塑美国大选选情，美国之音同步转播传译](/articles/voa/1012690.md)
 
 9-11 [俄罗斯人口危机恶化，六月出生人数不足十万 创25年来最低](/articles/voa/1012691.md)
@@ -598,6 +600,4 @@
 8-29 [Telegram首席执行官杜罗夫遭法国起诉](/articles/voa/1012987.md)
 
 8-29 [科学家称气候变化加剧了台风“格美”引发的致命灾害](/articles/voa/1012988.md)
-
-8-29 [巴黎残奥会在希望与包容的光芒中揭幕](/articles/voa/1012989.md)
 
