--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-11 [地球人口口｜“这个夏天再也捂不热他的尸体。”](/articles/cdt/337219.md)
+
+9-11 [四环青年｜55岁外卖“单王”猝死，每天接单20小时不是他的错](/articles/cdt/337221.md)
+
+9-11 [辩护人Defenders｜我们为什么选择沉默式辩护](/articles/cdt/337223.md)
+
+9-11 [柳飘飘了吗｜全女综艺，新的爹味重灾区](/articles/cdt/337225.md)
+
 9-10 [冰川思享号｜全国最知名烂尾楼，正在“浴火重生”](/articles/cdt/337228.md)
 
 9-10 [澎湃新闻｜“央视今晚还是不转播国足比赛”](/articles/cdt/337231.md)
@@ -12,6 +20,8 @@
 9-10 [星球商业评论｜传音不过山海关](/articles/cdt/337241.md)
 
 9-9 [每日一语 2024.9.9](/articles/cdt/337249.md)
+
+9-11 [【翻车现场】“连这新闻都得精选评论，当那些外资是傻的啊？”](/articles/cdt/337250.md)
 
 9-9 [观人随笔｜他死了，没有然后](/articles/cdt/337254.md)
 
@@ -590,14 +600,4 @@
 8-5 [浣花溪杜甫｜挟患儿以睡其母，曝光之前都是楷模，曝光之后都是恶魔](/articles/cdt/338261.md)
 
 8-5 [独角鲸工作坊｜这个考编大省，史无前例地砍掉了十万编制](/articles/cdt/338263.md)
-
-8-5 [亮见｜这件事如果属实，那就太令人发指了](/articles/cdt/338265.md)
-
-8-5 [中国新闻周刊｜全国性抗议后，孟加拉国“铁娘子”总理辞职了](/articles/cdt/338269.md)
-
-8-5 [【404文库】徐雪芬札记｜上网，不是一种奢侈品](/articles/cdt/338275.md)
-
-8-5 [维舟｜运动员不是夺金的工具人](/articles/cdt/338277.md)
-
-8-5 [【404帖子】黄裕生｜真正的现代化国家绝对不是“编户齐民”的国家](/articles/cdt/338280.md)
 
