--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-11 [每日一语 2024.9.10](/articles/cdt/337213.md)
+
 9-11 [地球人口口｜“这个夏天再也捂不热他的尸体。”](/articles/cdt/337219.md)
 
 9-11 [四环青年｜55岁外卖“单王”猝死，每天接单20小时不是他的错](/articles/cdt/337221.md)
@@ -598,6 +600,4 @@
 8-5 [每日一语 2024.8.5](/articles/cdt/338252.md)
 
 8-5 [码头水鬼 | 泡在洪水里看奥运](/articles/cdt/338258.md)
-
-8-5 [浣花溪杜甫｜挟患儿以睡其母，曝光之前都是楷模，曝光之后都是恶魔](/articles/cdt/338261.md)
 
