--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-11 [布林肯和拉米在美英对话中强调台海现状的重要性](/articles/voa/1012685.md)
+
 9-11 [加拿大释放将对中国科技产品和关键矿物进一步加征关税的信号](/articles/voa/1012686.md)
 
 9-11 [巴勒斯坦官员说，以色列攻击人道躲避地区打死至少19 人](/articles/voa/1012687.md)
@@ -598,6 +600,4 @@
 8-29 [习近平会见沙利文，吁美中相向而行 官媒盼美“读懂中国”](/articles/voa/1012983.md)
 
 8-29 [习近平会见沙利文，双方强调愿意继续努力稳定双边关系](/articles/voa/1012984.md)
-
-8-29 [IBM将关闭中国研发部门、裁员逾千人 分析:美中脱钩最新征兆](/articles/voa/1012985.md)
 
