--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-11 [监管机构试图阻止美国代表参与中国运动员兴奋剂事件讨论](/articles/nyt/1042395.md)
+
 9-11 [华为推出三折叠屏手机Mate XT，售价19999元起](/articles/nyt/1042396.md)
 
 9-10 [特朗普是如何在辩论中攻击、诋毁女性的](/articles/nyt/1042397.md)
@@ -598,6 +600,4 @@
 6-11 [中国5月出口创一年多以来最快增速](/articles/nyt/1042693.md)
 
 6-7 [强人领袖遇挫，全球选举年政治现状大洗牌？](/articles/nyt/1042694.md)
-
-6-7 [诺曼底登陆80周年：新的战争阴云下，我们在纪念什么](/articles/nyt/1042695.md)
 
