--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-11 [贺锦丽特朗普首次正面交锋：亮点与大选形势变化](/articles/nyt/1042394.md)
+
 9-11 [监管机构试图阻止美国代表参与中国运动员兴奋剂事件讨论](/articles/nyt/1042395.md)
 
 9-11 [华为推出三折叠屏手机Mate XT，售价19999元起](/articles/nyt/1042396.md)
@@ -598,6 +600,4 @@
 6-11 [重启核军备竞赛？应对中俄核战略，美国考虑扩大核武库](/articles/nyt/1042692.md)
 
 6-11 [中国5月出口创一年多以来最快增速](/articles/nyt/1042693.md)
-
-6-7 [强人领袖遇挫，全球选举年政治现状大洗牌？](/articles/nyt/1042694.md)
 
